def/force-app/main/default/objects/Regionalaccounts__c/Regionalaccounts__c.object-meta.xml
<CustomObject>
    <label>Regionalaccounts</label>
    <nameField>
        <label>Regionalaccounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regionalaccounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>