def/force-app/main/default/objects/Regionalaccounts__c/fields/AccountSLAdate__c.field-meta.xml
<CustomField>
    <fullName>AccountSLAdate__c</fullName>
    <formula>Account__r.SLAExpirationDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountSLAdate</label>
    <type>Date</type>
</CustomField>