def/force-app/main/default/objects/Regionalaccounts__c/fields/Masteraccrevenue__c.field-meta.xml
<CustomField>
    <fullName>Masteraccrevenue__c</fullName>
    <formula>Account__r.AnnualRevenue</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Masteraccrevenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>