def/force-app/main/default/objects/Regionalaccounts__c/fields/Salesrevenue__c.field-meta.xml
<CustomField>
    <fullName>Salesrevenue__c</fullName>
    <label>Salesrevenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>